<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <data>
    <variable
        name="vm"
        type="com.software.jgodort.tipcalculatormvvm.viewmodel.CalculatorViewModel"
        />
  </data>
  <android.support.constraint.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="8dp"
      android:paddingBottom="26dp"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      tools:context=".view.TipCalculatorActivity"
      tools:showIn="@layout/activity_tip_calculator"
      >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_check_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
      <EditText
          android:id="@+id/input_check_amount"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/check_hint"
          android:selectAllOnFocus="true"
          android:text="@={vm.inputCheckAmount}"
          />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_tip_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_check_amount"
        >
      <EditText
          android:id="@+id/input_tip_percentage"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/tip_hint"
          android:inputType="number"
          android:selectAllOnFocus="true"
          android:text="@={vm.inputTipPercentage}"
          />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/calculation_outputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="32dp"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_tip_percentage"
        >
      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical"
          >
        <TextView
            android:id="@+id/bill_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{vm.outputCheckAmount}"
            android:textAlignment="center"
            tools:text="$20.0"
            style="@style/TextAppearance.AppCompat.Large"
            />

        <TextView
            android:id="@+id/bill_amount_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_title"
            android:textAlignment="center"
            />
      </LinearLayout>

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical"
          >
        <TextView
            android:id="@+id/tip_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{vm.outputTipAmount}"
            android:textAlignment="center"
            tools:text="$20.0"
            style="@style/TextAppearance.AppCompat.Large"
            />

        <TextView
            android:id="@+id/tip_amount_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_title"
            android:textAlignment="center"
            />
      </LinearLayout>

      <LinearLayout
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical"
          >
        <TextView
            android:id="@+id/grand_total_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{vm.outputTotalDollarAmount}"
            android:textAlignment="center"
            tools:text="$20.0"
            style="@style/TextAppearance.AppCompat.Large"
            />

        <TextView
            android:id="@+id/grand_total_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_title"
            android:textAlignment="center"
            />
      </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/calculation_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@{vm.locationName}"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculation_outputs"
        tools:text="Veggie"
        style="@style/TextAppearance.AppCompat.Headline"
        />
  </android.support.constraint.ConstraintLayout>
</layout>