<resources>
  <string name="app_name">Tip Calculator MVVM</string>
  <string name="action_settings">Settings</string>
  <string name="check_hint">Check</string>
  <string name="tip_hint">Tip Percentage</string>
  <string name="check_title">Check</string>
  <string name="tip_title">Tip</string>
  <string name="total_title">Total</string>

  <string name="dollar_format">$%1$.02f</string>

  <string name="location_hint">Enter Location</string>
  <string name="action_save">Save</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_load">Load</string>
</resources>
